# ResQ_AI

./: .env.example  .gitignore  README.md
backend/: Dockerfile  Dockerfile.setup  pyproject.toml
backend/data/: commanders.csv
backend/migrations/: 000_init.sql  001_add_chat_support.sql  002_add_approvals.sql  003_add_commander_assignment.sql
backend/src/: config.py  main.py
backend/src/api/routes/: __init__.py  chat.py  commander.py  dispatcher.py  health.py  incidents.py  media.py  search.py  websocket.py
backend/src/graph/: __init__.py  orchestrator.py  state.py  workflow.py
backend/src/services/: __init__.py  llm_service.py  postgres_service.py  qdrant_service.py  redis_service.py  transcription_service.py  whisper_service.py
backend/src/utils/: __init__.py  logging.py
config/: config.yaml
data/osm/: bangalore_landmarks.json
data/synthetic/: incidents.json
data/synthetic/sops/: SOP-ACC-001.md  SOP-FIRE-001.md  SOP-MED-001.md  emergency_sop_india.json  emergency_sop_part2.json  emergency_sop_part3.json  metadata.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatInterface.jsx  Dashboard.jsx  IncidentForm.jsx  IncidentsPage.jsx  Layout.jsx  WhatsAppSimulator.jsx
frontend/src/pages/: CommanderDashboard.jsx  DispatcherDashboard.jsx  LandingPage.jsx
scripts/: download_data.py  seed_qdrant.py  test_portkey.py
